[gd_scene load_steps=11 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 974.0
margin_bottom = 414.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Input_Label" type="Label" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 974.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 2 )
text = "Enter Text Here :"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 477.0
margin_right = 974.0
margin_bottom = 550.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 808.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
max_length = 40

[node name="OK_Button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 893.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
rect_pivot_offset = Vector2( 36.5, 36.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 905.0
margin_top = 5.0
margin_right = 974.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "OK"

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a thing", "a feeling", "another feeling", "some things" )
story = "Once upon a time a %s ate a %s and felt very %s. It was a %s day for all good %s."

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a thing", "a name", "a description word (an adjective)", "a thing" )
story = "There once was %s called %s that lived as %s as a %s."

[node name="Story2" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a thing", "a name", "a description word (an adjective)", "a thing" )
story = "There once was %s called %s that lived as %s as a %s."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OK_Button" to="." method="_on_OK_Button_pressed"]
